fixed add button menu hidden by container
I'm thinking with portals

--- a/src/stylesheets/vortex/starter.scss
+++ b/src/stylesheets/vortex/starter.scss
@@ -182,7 +182,7 @@ svg.tool-icon {
   }
 }
 
-#add-tool-button {
+#add-tool-button-menu {
   // top padding needs to be large enough to fit the icon
   // and then some padding around it
   // padding: 2em $half-gutter $half-gutter;
